# Mkdocs-Template

./: .gitignore  Dockerfile  Dockerfile.ci  README.md  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt
docs/: index.md
docs/Common-Response-Models/: 204-no-content.md  401-unauthorized.md  403-permission-denied.md  404-ressources-not-found.md  422-validation-error.md  502-bad-gateway.md  504-gateway-timeout.md
docs/Endpoint-Types/: delete.md  get.md  post.md  put.md  sse.md  ws.md
docs/Services/Example-Service/: index.md
docs/Services/Example-Service/Endpoint-Descriptions/: example-delete-endpoint-description.md  example-get-endpoint-description.md  example-post-endpoint-description.md  example-put-endpoint-description.md
docs/Services/Example-Service/Endpoints/: example-delete-endpoint.md  example-get-endpoint.md  example-post-endpoint.md  example-put-endpoint.md
docs/Services/Example-Service/Response-Models/: name-already-exists.md
docs/stylesheets/: extra.css
